--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buensabor-dashboard",
+  "name": "buen-sabor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.0.0",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
+    "@coreui/react": "^5.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@mui/x-charts": "^7.3.0",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/x-charts": "^7.3.2",
     "@reduxjs/toolkit": "^2.2.3",
-    "axios": "^1.6.8",
+    "formik": "^2.4.6",
+    "immer": "^10.1.1",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.10.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
