feat:IB: Create repository

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 VITE_API_URL =  http://localhost:8080
+
+VITE_AUTH0_DOMAIN="dev-3vjz2w101xgvwuhm.us.auth0.com"
+VITE_AUTH0_CLIENT_ID="Usvqhgw7kWNFWAHIgaRq5CPXY38iYNxc"
+VITE_AUTH0_AUDIENCE="https://elbuensabor"
+
+VITE_AUTH0_API_DOMAIN="dev-3vjz2w101xgvwuhm.us.auth0.com"
+VITE_AUTH0_API_CLIENT_ID="LsIvL59Q1a1VZZVkyS4VKH99vDqxOgpn"
