--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@coreui/coreui": "^5.0.1",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.10.8",
     "swr": "^2.2.5",
     "yup": "^1.4.0"
